src/test/ui/consts/dangling-alloc-id-ice.stderr
error: this constant cannot be used
  --> $DIR/dangling-alloc-id-ice.rs:10:1
   |
LL | / const FOO: &() = { //~ ERROR this constant cannot be used
LL | |     let y = ();
LL | |     unsafe { Foo { y: &y }.long_live_the_unit }
LL | | };
   | |__^ type validation failed: encountered dangling pointer in final constant
   |
   = note: #[deny(const_err)] on by default

error: aborting due to previous error

